- New 'guild request <player>' command to request someone to join a guild.
- "Press ENTER to exit this program." prompt removed from Linux version.
- New 'guild leave' command (needs testing, but the server I play is down)
  added.
- Nearly complete oRO and pRO support. Thanks to jojobaoil and duckieeex!
- Display a warning if Kore is attempting to use a skill it doesn't have.

New config options:
- showDomain (flag)
  If set to 1 will display domains along with messages.
- serverType (number)
  Defines what kind of server you're playing on.
  0 = normal server
  1 = oRO (Oceania)
  2 = pRO (Philippines)
- allowedMaps (list of maps)
  Exit or respawn of Kore is on a map other than the ones specified
  in (list of maps). This is useful on pRO where GMs warp you to
  secret rooms.
- allowedMaps_reaction (number)
  0 = respawn
  1 = exit

Credits:
- jsteng: VVVS weapon name bugfix.
- arachno: Language code bugfix, chat.txt map name bugfix.
- Duckieeex, Mananabas, gradeA: Help with pRO support.

==================
### 1.5.2 (beta)
==================

** INCOMPATIBLE CHANGES **:
- For users of teleportAuto_search, in order to have it work you must now:
  * Set teleportAuto_idle to 1
  * Set ai_teleport_idle in timeouts.txt to the same as ai_teleport_search
  * Delete ai_teleport_search in timeouts.txt (it is obsolete)
  * Set route_randomWalk to 0
- If you have been using "maxUses" to limit the number of times you attempt to
  cast a skill, you may have to change it to "maxAttempts" instead.
- Kobolds have been renamed from Kobold # to Kobold-#.
  Many people don't know about using tabs in mon_control.txt, and
  would probably have problems figuring out what to do for Kobolds.
  Example: Kobold 1 is now Kobold-1


Bug fixes:
- Correctly detect pets.
- Fix all kinds of troubles regarding sitting and standing.
- Set maxDistance = distance (instead of defaulting to 30) in attackSkillSlot.
- The 'conf' chat command now works.